--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,1 +1,11 @@
-
+{
+  "verdion":2,
+  "builds": [
+    {"src": "*.js*","use": "@vercel/node"}
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+}
