--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,12 +1,20 @@
 {
   "version":2,
   "builds": [
-    {"src": "*.js","use": "@vercel/node"}
+    {
+       "src": "client/package.json",
+      "use": "@vercel/static-build",
+   
+    },
+    {
+      "src": "Backend/**/*",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      { "src": "/read/(.*)", "dest": "server/read" },
+    { "src": "/(.*)", "dest": "client/read" }
     }
   ]
 }
