--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
-    "start": "node server.js"
+    "server": "nodemon server.js"
   },
   "author": "abdi",
   "license": "ISC",
