--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI = mongodb+srv://abdib:abdi1234@clusterfile.btdxx8v.mongodb.net/?retryWrites=true&w=majority
 PORT = 3001
+Node_ENVT = development
