--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI = mongodb+srv://abdib:abdi1234@clusterfile.btdxx8v.mongodb.net/?retryWrites=true&w=majority
 PORT = 3001
 Node_ENVT = development
+SECRET_STR = '123wer-ert44-ght76-123dfgkernfk-er'
+LOGIN_EXPIRES = 90d
