--- a/Backend/.env
+++ b/Backend/.env
@@ -2,4 +2,4 @@ MONGO_URI = mongodb+srv://abdib:abdi1234@clusterfile.btdxx8v.mongodb.net/?retryW
 PORT = 3001
 Node_ENVT = development
 SECRET_STR = '123wer-ert44-ght76-123dfgkernfk-er'
-LOGIN_EXPIRES = 90d
+LOGIN_EXPIRES = "90d"
