--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "@mui/icons-material": "^5.14.5",
     "@mui/material": "^5.15.6",
     "@mui/utils": "^5.15.14",
+    "@mui/x-data-grid": "^7.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "install": "^0.13.0",
+    "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
